# bitmap-allocator

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: main.yml
bitmap_allocator/: all.html  index.html  sidebar-items.js  struct.BitAlloc16.html  struct.BitAllocCascade16.html  trait.BitAlloc.html  type.BitAlloc16M.html  type.BitAlloc1M.html  type.BitAlloc256.html  type.BitAlloc256M.html  type.BitAlloc4K.html  type.BitAlloc64K.html
search.desc/bitmap_allocator/: bitmap_allocator-desc-0-.js
search.index/: 1061dba258.js  18375fd6ab.js  224856e0bf.js  2801aec564.js  root.js
search.index/crateNames/: 01b2634d35.js
search.index/desc/: ddb0d5e919.js
search.index/entry/: a024244024.js
search.index/function/: 51a7b2e1d5.js
search.index/generic_inverted_index/: ded7b07721.js
search.index/name/: 7bfd04e60c.js
search.index/normalizedName/: 6ad777e536.js
search.index/path/: 7caf0ff2c8.js
search.index/type/: e22b5fef9b.js
src/: heap.rs  lib.rs
src/bitmap_allocator/: lib.rs.html
tests/: heap_alloc.rs
trait.impl/bitmap_allocator/: trait.BitAlloc.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/bitmap_allocator/: struct.BitAllocCascade16.js
